Index: fix paginator overlap for large numbers (#459)

--- a/public/css/lrr.css
+++ b/public/css/lrr.css
@@ -107,6 +107,15 @@ table thead .sorting_disabled a:after {
   display: none;
 }
 
+.paginate_button {
+  min-width: 2rem;
+  width: auto !important;
+}
+
+.ellipsis {
+  margin-left: 1rem;
+}
+
 .page-select {
   text-align:right;
 }
